--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^3.5.6"
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.9"
   },
   "devDependencies": {},
   "scripts": {
