--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node bin/www",
-    "postinstall": "npm run-script build",
-    "build": "./bin/build_react.sh"
+    "start": "node bin/www"
   },
   "repository": {
     "type": "git",
