--- a/react/.gitignore
+++ b/react/.gitignore
@@ -9,6 +9,7 @@
 /coverage
 
 # production
+# todo: should /build be pushed to deployment server or built locally in the container?
 # /build
 
 # misc
