--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
