--- a/react/package.json
+++ b/react/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-tinder-card": "^1.1.3"
+    "react-tinder-card": "^1.1.3",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
