--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
+    "node-fetch": "^2.6.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
