--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
+    "react-swipeable-cards": "^1.0.6",
     "react-tinder-card": "^1.1.3",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.8.3"
