--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku-ssl-redirect": "0.0.4",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
     "node-fetch": "^2.6.0",
