Build react in deployment
Remove `react/build` and add `build` script in `package.json`.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "build": "bin/build_react.sh",
     "start": "node bin/www"
   },
   "repository": {
