--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 services:
-  server:
+  backend:
     build:
       context: ./
       dockerfile: ./express/Dockerfile
@@ -12,26 +12,36 @@ services:
     depends_on:
       - mongo
     environment:
-      - GOOGLE_MAPS_API_KEY=
-      - YELP_API_KEY=
+      - DB_URI=mongodb://mongo:27017/findalicious
+      - GOOGLE_MAPS_API_KEY=$GOOGLE_MAPS_API_KEY
+      - YELP_API_KEY=$YELP_API_KEY
     networks:
       - app-network
   mongo:
     image: mongo
+    container_name: findalicious-mongodb
     volumes:
       - data-volume:/data/db
     ports:
       - "27017:27017"
     networks:
       - app-network
-  client:
+  frontend:
     build:
       context: ./react
       dockerfile: Dockerfile
     image: findalicious-frontend
     container_name: findalicious-react-frontend
     depends_on:
-      - server
+      - backend
+    environment:
+      # For React development server hot-reloading
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_EXPRESS_SERVER=http://localhost:3000
+    volumes:
+      - /usr/src/app/node_modules
+      # Mount local /react dir for quick development
+      - ./react:/usr/src/app
     ports:
       - "5000:5000"
     networks:
