docker-compose: Add PORT= env var
Was missing the `PORT=5000` environment variable, causing the
react developpment server to be served at port 3000, which conflicts
with the express container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       # For React development server hot-reloading
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_EXPRESS_SERVER=http://localhost:3000
+      - PORT=5000
     volumes:
       - /usr/src/app/node_modules
       # Mount local /react dir for development
