--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "main": "index.js",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^2.5.5",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-recommended": "^4.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
     "heroku-ssl-redirect": "0.0.4",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.9",
     "node-fetch": "^2.6.1",
+    "prettier": "^2.2.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node bin/www"
+    "start": "node bin/www",
+    "test:eslint": "eslint --ignore-path .gitignore '**/*.js' --fix"
   },
   "repository": {
     "type": "git",
