--- a/react/package.json
+++ b/react/package.json
@@ -15,7 +15,7 @@
     "react-hammerjs": "^1.0.1",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.0",
     "react-spinners": "^0.8.3",
     "reactjs-popup": "^1.5.0",
     "socket.io-client": "^2.3.0",
