--- a/express/package.json
+++ b/express/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "findalicious",
-  "version": "0.1.0",
-  "description": "Swipe through restaurants with friends and decide on where to eat!",
+  "name": "findalicious-server",
+  "description": "Express backend for Findalicious",
   "main": "index.js",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^2.5.5",
@@ -26,18 +25,6 @@
     "prettier": "^2.2.0"
   },
   "scripts": {
-    "build": "bin/build_react.sh",
-    "start": "node bin/www",
     "test:eslint": "eslint --ignore-path .gitignore '**/*.js' --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kelvinfan001/findalicious.git"
-  },
-  "author": "Kelvin Fan",
-  "license": "GNU General Public License v3.0",
-  "bugs": {
-    "url": "https://github.com/kelvinfan001/findalicious/issues"
-  },
-  "homepage": "https://github.com/kelvinfan001/findalicious#readme"
+  }
 }
