--- a/express/package.json
+++ b/express/package.json
@@ -10,7 +10,7 @@
     "express": "^4.17.1",
     "heroku-ssl-redirect": "0.0.4",
     "mongodb": "^3.5.6",
-    "mongoose": "^5.9.9",
+    "mongoose": "^5.11.8",
     "node-fetch": "^2.6.1",
     "socket.io": "^2.3.0"
   },
@@ -18,7 +18,6 @@
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
@@ -26,5 +25,10 @@
   },
   "scripts": {
     "test:eslint": "eslint --ignore-path .gitignore '**/*.js' --fix"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kelvinfan001/findalicious.git"
+  },
+  "license": "GPL-3.0-or-later"
 }
