--- a/react/package.json
+++ b/react/package.json
@@ -15,14 +15,14 @@
     "react-hammerjs": "^1.0.1",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.0",
     "react-spinners": "^0.8.3",
     "reactjs-popup": "^1.5.0",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "eslint": "7.2.0",
+    "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "^6.0.0",
@@ -31,7 +31,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.1.2"
   },
   "scripts": {
