--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,16 +1,13 @@
 # Dockerfile for Express backend.
 
-FROM node:10.16-alpine
+FROM node:14.15.3-alpine3.12
 
 WORKDIR /usr/src/app
 
-COPY ./package*.json ./
+COPY package*.json ./
 
 # Install dependencies
-RUN npm install --silent
-
-# Copy local files to app folder
-COPY . .
+RUN npm install --silent --production
 
 EXPOSE 3000
 
