--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Swipe through restaurants with friends and decide on where to eat!",
     "scripts": {
         "heroku-prebuild": "cd express && npm install",
-        "start": "node bin/www",
-        "build": "bin/build_react.sh"
+        "start": "cd express && npm start",
+        "build": "cd react && npm install && npm run-script build"
     },
     "repository": {
         "type": "git",
