Rename react and express npm modules

--- a/express/package.json
+++ b/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "findalicious-server",
+  "name": "findalicious-backend",
   "description": "Express backend for Findalicious",
   "main": "index.js",
   "dependencies": {
